<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >
    
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#971425"
        android:orientation="horizontal"
        android:weightSum="1" >
        
       	<TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create_user_text"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
        	        
    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignRight="@+id/password_text"
        android:layout_below="@+id/confirm_password_text"
        android:layout_marginTop="38dp"
        android:text="@string/done" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignRight="@+id/password_text"
        android:layout_below="@+id/done_button"
        android:text="@string/cancel" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_text"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/password" 
        android:inputType="textPassword" />

    
    <EditText
        android:id="@+id/confirm_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/confirm_password_text"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username" />

</RelativeLayout>
