<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecorderActivity" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#971425"
        android:orientation="horizontal"
        android:weightSum="4" >
        
  	  	<Button
	        android:id="@+id/friends_button"
	        android:background="#971425"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:textColor="#ffffff"
	        android:text="@string/friends" />        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/howler"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/message_list_button"
            android:background="#971425"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
	        android:textColor="#ffffff"            
            android:text="@string/messages" />
    </LinearLayout>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_title"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/enter_title"
        android:layout_marginBottom="10dp"
        android:clickable="false"
        android:text="@string/play" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/play_button"
        android:layout_alignBottom="@+id/play_button"
        android:layout_alignRight="@+id/enter_title"
        android:text="@string/delete"
        android:clickable="false"/>

    <TextView
        android:id="@+id/audio_pos_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/recipient_volume"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/set_recip_vol" />

    <SeekBar
        android:id="@+id/recipient_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="54dp" />

    <TextView
        android:id="@+id/instr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Please enter a title before recording a message." />

    <EditText
        android:id="@+id/enter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/title_text" />

    <ImageButton
        android:id="@+id/record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:src="@drawable/record_button" />

</RelativeLayout>